--- a/langs/zh_CN/LC_MESSAGES/messages.po
+++ b/langs/zh_CN/LC_MESSAGES/messages.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: seavpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-05-07 14:15+0800\n"
-"PO-Revision-Date: 2013-05-07 14:23+0800\n"
+"POT-Creation-Date: 2013-05-08 13:55+0800\n"
+"PO-Revision-Date: 2013-05-08 13:55+0800\n"
 "Last-Translator: greensea <gs@bbxy.net>\n"
 "Language-Team: seavpn <gs@bbxy.net>\n"
 "Language: \n"
@@ -107,6 +107,7 @@ msgid "VPN Account"
 msgstr "VPN 帐号"
 
 #: templates/header.html:37
+#: templates/header.html:38
 msgid "Help"
 msgstr "帮助"
 
@@ -223,21 +224,25 @@ msgid "New Password:"
 msgstr "新密码："
 
 #: includes/functions.php:78
+#: includes/functions.php:82
 #, php-format
 msgid "%d days"
 msgstr "%d天"
 
 #: includes/functions.php:83
+#: includes/functions.php:89
 #, php-format
 msgid " %d hours"
 msgstr "%d小时"
 
 #: includes/functions.php:88
+#: includes/functions.php:96
 #, php-format
 msgid " %d mins"
 msgstr "%d分"
 
 #: includes/functions.php:92
+#: includes/functions.php:102
 #, php-format
 msgid " %d secs"
 msgstr "%d秒"
@@ -524,6 +529,76 @@ msgstr "如果浏览器没有跳转，请<a href='%s'>点击这里</a>"
 #, c-format
 msgid "%1$s (%2$d%%) of %3$s used"
 msgstr "已使用 %1$s，占总流量 %3$s 的 %2$d%%"
+
+#: server.php:9
+msgid "*HIDDEN*"
+msgstr "已隐藏"
+
+#: templates/header.html:37
+#: templates/server.html:4
+msgid "Servers"
+msgstr "服务器列表"
+
+#: templates/server.html:7
+msgid "Server Status"
+msgstr "状态"
+
+#: templates/server.html:11
+msgid "Address"
+msgstr "服务器域名/IP"
+
+#: templates/server.html:12
+msgid "Location"
+msgstr "地理位置"
+
+#: templates/server.html:13
+msgid "PPTP support"
+msgstr "PPTP 支持"
+
+#: templates/server.html:14
+msgid "L2TP support"
+msgstr "L2TP 支持"
+
+#: templates/server.html:15
+msgid "R.T. Traffic"
+msgstr "实时流量"
+
+#: templates/server.html:16
+msgid "Uptime"
+msgstr "运行时间"
+
+#: templates/server.html:17
+#: templates/server.html:69
+#: templates/server.html:72
+msgid "Online"
+msgstr "在线"
+
+#: templates/server.html:18
+msgid "Remark"
+msgstr "备注"
+
+#: templates/server.html:36
+#: templates/server.html:45
+msgid "Supported"
+msgstr "支持"
+
+#: templates/server.html:38
+#: templates/server.html:54
+msgid "Not Supported"
+msgstr "不支持"
+
+#: templates/server.html:70
+#: templates/server.html:73
+msgid "Offline"
+msgstr "离线"
+
+#: templates/server.html:50
+msgid "L2TP Pre-shared key:"
+msgstr "L2TP 预共享密钥："
+
+#: server.php:17
+msgid "Unknown"
+msgstr "未知"
 
 #~ msgid ""
 #~ "Download: {$vpn.stat_monthly.inbandstr} Upload: {$vpn.stat_monthly."
